syntax = "proto3";

package users;
option go_package = "server/users";

// Users are stored in DB = tags.

// User - A Wiregost user
message User {
        string Name = 1;
        bool Online = 2;
        bytes Password = 3;
        bool Admin = 4;
}

// AddUserRequest - Add a new user to Wiregost and save it to DB
message AddUserRequest {
        User User = 1;
}

message AddUser {
        bool Success = 1;
        string Err = 2;
}

// DeleteUserRequest - Delete a user from DB, and optionally disconnect all his consoles
message DeleteUserRequest {
        User User = 1;
        bool Disconnect = 2;
}

message DeleteUser {
        bool Success = 1;
        bool Disconnected = 2;
        string Err = 3;
}
